--- a/client/src/Components/Button/Button.css
+++ b/client/src/Components/Button/Button.css
@@ -1,11 +1,12 @@
 .btn{
     border:1px solid#75b038 !important;
-    color:#f2f2f2;
-    background:#75b038;
+    color:#f2f2f2 !important;
+    background-color:#75b038 !important;
     border-radius:4px;
-    width:80px;
-    height:35px;
+    text-align: center !important;
+    padding: auto;
  }
+
  .btn:hover{
      background: none;
      color:#b6b6b6;
@@ -30,3 +31,4 @@
     background-image: linear-gradient(to top, #83c158, #608d41);
     color:white
 }
+
