--- a/client/src/Pages/SingleProduct/SingleProduct.css
+++ b/client/src/Pages/SingleProduct/SingleProduct.css
@@ -1,152 +1,24 @@
-.Dashboard{
-    background:#EAEAEA;
+.Product{
+    padding: 0px 20px;
 }
-
-.dashboard__header{
-    background-color:#22242a;
-    border-bottom:1px solid #393d46;
-    position:fixed;
-    left:0;
-    right:0;
-    padding:0 15px;
-    height: 60px;
-    box-sizing: border-box;
-    display: flex;
-    z-index: 200;
-}
-
-
-.button__header{
-   border:1px solid#75b038 !important;
-   color:#f2f2f2;
-   background:#75b038;
-   border-radius:4px;
-   width:80px;
-   height:35px;
-}
-.button__header:hover{
-    background: none;
-    color:#b6b6b6;
-    border:1px solid #b6b6b6 !important;
-}
-.button__header:focus{
-    outline:none;
-}
-.list__header{
-    display:flex;
-    color:white;
-    list-style: none; 
-    align-items: center;
-    height: 100%;
-    margin-right:0;
-    margin-left: auto; 
-    margin-bottom: 0;    
-}
-.list__header li{
-    color:white;
-}
-
-
-
-
-
-
-
-
-.MainContent{
-    display:flex;
-    flex-direction: column;
-    color:black;
-    margin-left: 210px;
-    height: fit-content; 
-    Font :sans-serif
-
-}
-
-.MainContent h1{
-    color: rgb(121, 121, 121);
-    font-size: 36px;
-    font-weight: 900;
-    line-height: 39.6px
-}
-.Wrapper{
-    margin-top: 60px;
-    padding: 0 15px;
-  
-}
-.ReviewDescription,
-.ProductDescription{
-    color: #737373;
-    Font :sans-serif;
-    line-height: 18.5667px;
-    font-weight: 400;   
-}
-
-.ReviewWriter{
-    font-size: 15px;
-    line-height: 18px;
-    font-weight: 700;
-    color: #797979
-}
-
-.ProductContent{
-    display:flex;
-    flex-direction: row;
-    color:black;
-    margin-top: 25px; 
-    padding-left:20px; 
-    margin-bottom: 40px;
-}
-.ProductContent p{
-    margin-bottom: 6px !important;
-    color: #797979;
-    font-weight: 600;
-}
-
 .ProductImage{
-  margin-Right: 35px;
-}
-.ProductImage img{
-    width:250px;
-    height: 250px;
-    object-fit: cover;
-}
-.ReviewContent{
-    display:flex;
-    flex-direction: row;
-}
-.Wrapper p{
-    margin-bottom: 0px;
-}
-.ReviewSection{
-    padding: 0 20px;
-}
-.Review{
+    margin-top: 120px;
+    text-align: center;
     margin-bottom: 30px;
-    padding-left: 20px;
 }
-.reviewLabel{
-    padding-right: 0px !important;
-    font-size: 18px ;
+.ProductInfo{
+text-align: center;
+}
+
+.ProductInfo span,
+.ProductInfo h1{
     font-weight: 600;
-    color: #737373;
-}
-.AddReview p{
-    color: #737373;
-    font-size: 15px;
-    font-weight:500;
-    line-height: 1.42857143;
-}
-.ReviewForm{
-    margin-top: 10px;
-    margin-bottom: 40px;
-}
-.time{
-    color: #666666;
-    font-size: 14px;
-    line-height: 12.85px;
-    font-weight: 500;
+    color: black;
+     opacity: 80%;
     font-family: sans-serif;
-    margin-bottom: 8px !important;
-    margin-top: 2px !important;
+}
+p{
+    font-weight:500;
+    font-family: sans-serif;
+    margin-bottom: 2px !important;
 }
