--- a/client/src/Pages/Message/SingleMessage/SingleMessage.css
+++ b/client/src/Pages/Message/SingleMessage/SingleMessage.css
@@ -47,7 +47,7 @@
    margin-bottom: 20px;
  }
 
- .receiver{
+ #message .receiver{
      background-color: #75b038;
      color: white;
      width: 70%;
@@ -56,7 +56,7 @@
      margin-left:auto;
      margin-right: 0px;  
  }
- .sender{
+ #message .sender{
     background-color: #CDCDCD;
     color: black;
     width: 70%;
