--- a/client/src/Dashboard/Navbar/Toolbar/Toolbar.css
+++ b/client/src/Dashboard/Navbar/Toolbar/Toolbar.css
@@ -41,6 +41,9 @@
     height: 3px;
     background-color: white;
 }
+.navbarDiv{
+    padding-top: 10px;
+}
 
 @media (min-width: 500px) {
     .DrawerToggle {
