--- a/client/src/Pages/SellerProfile/SellerProfile.css
+++ b/client/src/Pages/SellerProfile/SellerProfile.css
@@ -41,7 +41,13 @@
 .button{
     margin-top: 10px;
 }
-
+.leftMargin{
+    margin-left: 20px;
+    margin-top: 20px;
+}
+.modalHeading{
+    text-align: center;
+}
 @media (min-width:600px){
     .profile{
         display: flex;
