--- a/client/src/Dashboard/Sidebar/Sidebar.css
+++ b/client/src/Dashboard/Sidebar/Sidebar.css
@@ -7,6 +7,13 @@
     overflow: auto;
     padding-top: 60px;
 }
+.username{
+ text-decoration: none;
+ color: white;
+ font-weight: 600;
+ text-align: center;
+ margin-top: 10px;
+}
 
 .image{
     text-align: center;
