--- a/client/src/Pages/SellerProfile/SellerProfile.css
+++ b/client/src/Pages/SellerProfile/SellerProfile.css
@@ -11,6 +11,12 @@
     padding: 20px 0;
    
 }
+.activeOrder_table{
+    margin-left: 50px;
+    margin-right: 50px;
+    margin-top: 20px;
+
+}
 .profile{
     width:88%;
     margin: 0 auto;
