--- a/client/src/Pages/SingleProduct/SingleProduct.css
+++ b/client/src/Pages/SingleProduct/SingleProduct.css
@@ -49,3 +49,14 @@ p{
     font-family: sans-serif;
     margin-bottom: 2px !important;
 }
+.additional_text{
+    margin-top: 20px;
+    font-size: 24px;
+    font-weight: 600;
+    margin-left: 20%;
+    margin-right: 20%;
+    text-align: center;
+    
+    
+
+}
