--- a/client/src/Pages/Home/Home.css
+++ b/client/src/Pages/Home/Home.css
@@ -15,3 +15,33 @@
     font-weight: 900;
     line-height: 200%;
 }
+.home_intro{
+    display: flex;
+    flex-direction: row;
+    margin-top: 60px;
+}
+.home_intro_left{
+    margin-left: 10%;
+    padding-right: 10%;
+    width: 40%;
+}
+.home_intro_right{
+  margin-right: 10%;
+  padding-left: 20px;
+}
+.home_intro_right p{
+  font-weight: 500;
+  font-size: 24px;
+}
+.home_intro_right h2{
+font-weight: 700;
+margin-bottom: 30px;
+font-size: 44px;
+line-height: 180%;
+}
+.logo_home{
+    height: 300px;
+    object-fit: contain;
+    width: 200%;
+  
+}
